CouchDbSetup no millis view, added BatteryRecordDataCache -- ready to test